# learning_opengl

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  SharedDef.cmake
dep/: .gitattributes
gl_advance_opengl/gl_cubemap_skybox/: CMakeLists.txt  gl_cubemap_skybox
gl_advance_opengl/gl_depth_testing/: CMakeLists.txt  main.cpp
gl_advance_opengl/gl_frame_buffer/: CMakeLists.txt  gl_frame_buffer  main.cpp
gl_advance_opengl/gl_stencil_testing/: CMakeLists.txt  main.cpp
gl_basic/: CMakeLists.txt  build  main  main.cpp
gl_game2d_breakout/: CMakeLists.txt
gl_light/: build  core  main  main.cpp  run
gl_model/: CMakeLists.txt  CMakeLists.txt.old  gl_model  imgui.ini  main.cpp
gl_multilights/: CMakeLists.txt  build_app  main.cpp
glad/: CMakeLists.txt
imgui/: CMakeLists.txt
include/: CMakeLists.txt  CommonDefines.h  CommonDefines.h.in
include/glad/: glad.h
include/learning/: CMakeLists.txt  GLLight.h  GLModel.cpp  defines.h  utility.h
lib/: .gitattributes  SOIL.lib  assimp.lib  glfw3.lib  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp  stb_image.cpp
lib/macos/: .gitattributes  libIrrXML.dylib  libassimp.dylib  libz.1.2.11.dylib
lib/win64/: .gitattributes  IrrXMLd.lib  assimp-vc142-mtd.lib  glfw3.lib  zlibd.exp  zlibd.lib  zlibstaticd.lib
shaders/: multilights.object.fs
